yaml/multiple-rules/vs-fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: articles-vs
spec:
  hosts:
  - articles
  http: # BREAK EVERYTHING!
  - fault:
      abort:
        httpStatus: 404
        percentage:
          value: 100
    route:
    - destination:
        host: articles
  - match:
    - uri:
        prefix: "/article/breaking-news"
    route:
    - destination:
        host: articles
      headers:
        response:
          add:
            no-cache: "true"
      timeout: 2s
  - match:
    - uri:
        prefix: /blog
    rewrite:
      uri: /beta/blog
    route:
    - destination:
        host: articles
      timeout: 2s
  - route:
    - destination:
        host: articles
    timeout: 2s
    weight: 100
